--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div class="position-card">
                 <div class="position-number">Position 5</div>
                 <div class="person-name">Ethan</div>
+                <button class="edit-btn">Edit</button>
+
             </div>
         </div>
 
@@ -32,6 +34,8 @@
             <div class="position-card">
                 <div class="position-number">Position 4</div>
                 <div class="person-name">Diana</div>
+                <button class="edit-btn">Edit</button>
+
             </div>
         </div>
 
@@ -40,6 +44,8 @@
             <div class="position-card">
                 <div class="position-number">Position 3</div>
                 <div class="person-name">Charlie</div>
+                <button class="edit-btn">Edit</button>
+
             </div>
         </div>
 
@@ -48,6 +54,8 @@
             <div class="position-card">
                 <div class="position-number">Position 2</div>
                 <div class="person-name">Bob</div>
+                <button class="edit-btn">Edit</button>
+
             </div>
         </div>
 
@@ -56,6 +64,8 @@
             <div class="position-card">
                 <div class="position-number">Position 1</div>
                 <div class="person-name">Alice</div>
+                <button class="edit-btn">Edit</button>
+
             </div>
         </div>
     </div>
@@ -63,8 +73,10 @@
     <div id="controls">
         <button id="startBtn">Start Rotation</button>
         <button id="stopBtn" class="stop">Stop Rotation</button>
-    </div>
+        <button id="rotateNowBtn" class="manual-rotate">Rotate Now</button>
 
+    </div>
+    
     <div id="log">
         <h2>Rotation Log</h2>
         <!-- Log entries will be dynamically inserted here -->
