initial position names changed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="grid-item" id="position-5">
             <div class="position-card">
                 <div class="position-number">Position 5</div>
-                <div class="person-name">Ethan</div>
+                <div class="person-name">Drew</div>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -33,7 +33,7 @@
         <div class="grid-item" id="position-4">
             <div class="position-card">
                 <div class="position-number">Position 4</div>
-                <div class="person-name">Diana</div>
+                <div class="person-name">Yayha</div>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -43,7 +43,7 @@
         <div class="grid-item" id="position-3">
             <div class="position-card">
                 <div class="position-number">Position 3</div>
-                <div class="person-name">Charlie</div>
+                <div class="person-name">Max</div>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -53,7 +53,7 @@
         <div class="grid-item" id="position-2">
             <div class="position-card">
                 <div class="position-number">Position 2</div>
-                <div class="person-name">Bob</div>
+                <div class="person-name">Gudlum</div>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -63,8 +63,8 @@
         <div class="grid-item" id="position-1">
             <div class="position-card">
                 <div class="position-number">Position 1</div>
-                <div class="person-name">Alice</div>
-                <button class="edit-btn">Edit</button>
+                <div class="person-name"></div>
+                <button class="edit-btn">Brianna</button>
 
             </div>
         </div>
