--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="grid-item" id="position-1">
             <div class="position-card">
                 <div class="position-number">Position 1</div>
-                <div class="person-name"></div>
-                <button class="edit-btn">Brianna</button>
+                <div class="person-name">Brianna</div>
+                <button class="edit-btn">Edit</button>
 
             </div>
         </div>
