--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="position-card">
                 <div class="position-number">Position 5</div>
                 <div class="person-name">Drew</div>
+                <span class="position-label"></span>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -34,6 +35,7 @@
             <div class="position-card">
                 <div class="position-number">Position 4</div>
                 <div class="person-name">Yayha</div>
+                <span class="position-label"></span>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -44,6 +46,7 @@
             <div class="position-card">
                 <div class="position-number">Position 3</div>
                 <div class="person-name">Max</div>
+                <span class="position-label"></span>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -54,6 +57,7 @@
             <div class="position-card">
                 <div class="position-number">Position 2</div>
                 <div class="person-name">Gudlum</div>
+                <span class="position-label"></span>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -64,6 +68,7 @@
             <div class="position-card">
                 <div class="position-number">Position 1</div>
                 <div class="person-name">Brianna</div>
+                <span class="position-label"></span>
                 <button class="edit-btn">Edit</button>
 
             </div>
@@ -87,3 +92,5 @@
 
 </body>
 </html>
+
+
